# StackAndQueueAsListsAndMassives

./: CMakeLists.txt  Expression.cpp  QueueAsList.cpp  QueueAsMassive.cpp  QueueSTL.cpp  StackAsList.cpp  StackAsMassive.cpp  StackSTL.cpp  StackX2InMassive.cpp  list.h  main.cpp
